BENCH-299 Very quick touch up of ProductService.java, more extreme refactors should be raised through a separate ticket